[project]
name = "aoe2ct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "authlib>=1.5.2",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.2",
    "uvicorn[standard]>=0.34.2",
]

[dependency-groups]
dev = []
